--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME=hire_an_esquire_candidate_api
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:GjglO2uNutd8FBvTBNOs4swR827m5FAEOL+R+wLZjgY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -9,7 +9,7 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
+DB_DATABASE=hire_an_esquire_api
 DB_USERNAME=homestead
 DB_PASSWORD=secret
 
